<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp32"
    android:paddingEnd="@dimen/dp32"
    android:paddingBottom="@dimen/dp32"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_add_transact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_type"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_transact"
        app:drawableEndCompat="@drawable/ic_down"
        android:drawablePadding="@dimen/dp4"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_tran_desp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:hint="@string/transaction_description"/>

    <TextView
        android:id="@+id/tv_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:textSize="@dimen/dp18"
        android:layout_marginTop="27dp"
        app:layout_constraintRight_toLeftOf="@id/et_tran_value"
        app:layout_constraintTop_toBottomOf="@id/et_tran_desp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_tran_value"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="0"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_tran_desp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/iv_up"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_up"
        android:layout_marginTop="15dp"
        android:padding="@dimen/dp16"
        app:layout_constraintLeft_toRightOf="@id/et_tran_value"
        app:layout_constraintTop_toBottomOf="@id/et_tran_desp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/iv_down"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_down"
        android:layout_marginTop="35dp"
        android:padding="@dimen/dp16"
        app:layout_constraintLeft_toRightOf="@id/et_tran_value"
        app:layout_constraintTop_toBottomOf="@id/et_tran_desp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/et_tran_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>