<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="130dp"
    android:layout_marginStart="@dimen/dp16"
    android:layout_marginTop="@dimen/dp16"
    android:layout_marginEnd="@dimen/dp16"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/expenses"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_expense_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp32"
            android:text="@string/_0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_expense" />

        <View
            android:id="@+id/expense_divider"
            android:layout_width="@dimen/dp1"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:background="@color/black"
            app:layout_constraintLeft_toRightOf="@id/tv_expense"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/income"
            app:layout_constraintLeft_toRightOf="@id/expense_divider"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_income_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp32"
            android:text="@string/_0"
            app:layout_constraintLeft_toRightOf="@id/expense_divider"
            app:layout_constraintTop_toBottomOf="@id/tv_income" />

        <View
            android:id="@+id/income_divider"
            android:layout_width="@dimen/dp1"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:background="@color/black"
            app:layout_constraintLeft_toRightOf="@id/tv_income"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/dp32"
            android:text="@string/balance"
            app:layout_constraintLeft_toRightOf="@id/income_divider"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_balance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp32"
            android:text="@string/_0"
            app:layout_constraintLeft_toRightOf="@id/income_divider"
            app:layout_constraintTop_toBottomOf="@id/tv_income" />

        <ProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginEnd="@dimen/dp32"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/income_divider"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>